--- a/view/index.html
+++ b/view/index.html
@@ -5,12 +5,111 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT Sans">
+    <link rel="stylesheet" href="/static/css/player.css">
+    <link rel="stylesheet" href="/static/css/site-body.css">
+    
     <title>Document</title>
 </head>
+<style>
+    html {
+        padding: 0px;
+        margin: 0px;
+        border: none;
+    }
+    body {
+        width: 100%;
+        height: 100vh;
+        padding: 0;
+        margin: 0;
+        border: none;
+    }
+    .body-container {
+        width: 100%;
+        height: 100%;
+    }
+</style>
 <body>
-    
+    <div class="body-container">
+        <div class="site-body">
+            <div class="leftPane">
+                <div class="roomInfoPane">
+                    <div class="roomInfoPaneContainer">
+                        <p id="roomName">The Room Name</p>
+                        <p id="roomID">The Room Joining ID</p>
+                    </div>
+                </div>
+                <div class="roomLobyPane">
+                    <h2>People In the Lobby:</h2>
+                    <div class="roomLobyEntity">
+                        <img src="/static/dp.jpg" alt="">
+                        <div class="roomLobyEntityInfo">
+                            <p>Name</p>
+                            <p>Status</p>
+                        </div>
+                    </div>
+                    <div class="roomLobyEntity">
+                        <img src="/static/dp.jpg" alt="">
+                        <div class="roomLobyEntityInfo">
+                            <p>Name</p>
+                            <p>Status</p>
+                        </div>
+                    </div>
+                    <div class="roomLobyEntity">
+                        <img src="/static/dp.jpg" alt="">
+                        <div class="roomLobyEntityInfo">
+                            <p>Name</p>
+                            <p>Status</p>
+                        </div>
+                    </div>
+                    <div class="roomLobyEntity">
+                        <img src="/static/dp.jpg" alt="">
+                        <div class="roomLobyEntityInfo">
+                            <p>Name</p>
+                            <p>Status</p>
+                        </div>
+                    </div>
+                    <div class="roomLobyEntity">
+                        <img src="/static/dp.jpg" alt="">
+                        <div class="roomLobyEntityInfo">
+                            <p>Name</p>
+                            <p>Status</p>
+                        </div>
+                    </div>
+                    <div class="roomLobyEntity">
+                        <img src="/static/dp.jpg" alt="">
+                        <div class="roomLobyEntityInfo">
+                            <p>Name</p>
+                            <p>Status</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="midPane"></div>
+            <div class="rightPane"></div>
+        </div>
+        <div class="player">
+            <input type="range" min="1" max="1000" value="1" class="seek-slider" id="range">
+            <div  class="player-controls">
+                <div class="player-mediaInfo">
+                    <div class="player-mediaInfoBox">
+                        <img src="/static/dp.jpg">
+                        <div class="player-mediaInfoText">
+                            <p>Name of The Song</p>
+                            <p>Album Name</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="player-mainControls">
+                    <div class="player-playcontrols">
+                        <img src="/static/icons/backward.svg" id="player-back-btn">
+                        <img src="/static/icons/play.svg" id="player-playpause-btn">
+                        <img src="/static/icons/forward.svg" id="player-next-btn">
+                    </div>
+                </div>
+                <div class="player-otherControls"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
