--- a/view/index.html
+++ b/view/index.html
@@ -85,8 +85,130 @@
                     </div>
                 </div>
             </div>
-            <div class="midPane"></div>
-            <div class="rightPane"></div>
+            <div class="midPane">
+                <div class="songSearchBar">
+                    <input type="text" placeholder="Search Song">
+                    <button>Search</button>
+                </div>
+                <div class="chatArea">
+                    <div class="chatBubble">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium, natus in repellat possimus nemo asperiores nihil, accusantium perspiciatis aperiam qui praesentium quis sed facere culpa maxime non suscipit inventore consequatur?
+                    </div>
+                    <div class="chatBubble">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium, natus in repellat possimus nemo asperiores nihil, accusantium perspiciatis aperiam qui praesentium quis sed facere culpa maxime non suscipit inventore consequatur?
+                    </div>
+                    <div class="chatBubble bubbleRight">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium, natus in repellat possimus nemo asperiores nihil, accusantium perspiciatis aperiam qui praesentium quis sed facere culpa maxime non suscipit inventore consequatur?
+                    </div>
+                    <div class="chatBubble">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium, natus in repellat possimus nemo asperiores nihil, accusantium perspiciatis aperiam qui praesentium quis sed facere culpa maxime non suscipit inventore consequatur?
+                    </div>
+                    <div class="chatBubble">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium, natus in repellat possimus nemo asperiores nihil, accusantium perspiciatis aperiam qui praesentium quis sed facere culpa maxime non suscipit inventore consequatur?
+                    </div>
+                    <div class="chatBubble">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium, natus in repellat possimus nemo asperiores nihil, accusantium perspiciatis aperiam qui praesentium quis sed facere culpa maxime non suscipit inventore consequatur?
+                    </div>
+                    <div class="chatBubble">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium, natus in repellat possimus nemo asperiores nihil, accusantium perspiciatis aperiam qui praesentium quis sed facere culpa maxime non suscipit inventore consequatur?
+                    </div>
+                </div>
+                <div class="chatTextPane">                    
+                    <input type="text" placeholder="Enter Your Message">
+                    <button>Send</button>
+                </div>
+            </div>
+            <div class="rightPane">
+                <h2>Playlist :</h2>
+                <div class="PlaylistEntity">
+                    <img src="/static/dp.jpg" alt="">
+                    <div class="PlaylistEntityInfo">
+                        <p>Name</p>
+                        <p>Album</p>
+                        <p>Artist</p>
+                    </div>
+                </div>
+                <div class="PlaylistEntity">
+                    <img src="/static/dp.jpg" alt="">
+                    <div class="PlaylistEntityInfo">
+                        <p>Name</p>
+                        <p>Album</p>
+                        <p>Artist</p>
+                    </div>
+                </div>
+                <div class="PlaylistEntity">
+                    <img src="/static/dp.jpg" alt="">
+                    <div class="PlaylistEntityInfo">
+                        <p>Name</p>
+                        <p>Album</p>
+                        <p>Artist</p>
+                    </div>
+                </div>
+                <div class="PlaylistEntity">
+                    <img src="/static/dp.jpg" alt="">
+                    <div class="PlaylistEntityInfo">
+                        <p>Name</p>
+                        <p>Album</p>
+                        <p>Artist</p>
+                    </div>
+                </div>
+                <div class="PlaylistEntity">
+                    <img src="/static/dp.jpg" alt="">
+                    <div class="PlaylistEntityInfo">
+                        <p>Name</p>
+                        <p>Album</p>
+                        <p>Artist</p>
+                    </div>
+                </div>
+                <div class="PlaylistEntity">
+                    <img src="/static/dp.jpg" alt="">
+                    <div class="PlaylistEntityInfo">
+                        <p>Name</p>
+                        <p>Album</p>
+                        <p>Artist</p>
+                    </div>
+                </div>
+                <div class="PlaylistEntity">
+                    <img src="/static/dp.jpg" alt="">
+                    <div class="PlaylistEntityInfo">
+                        <p>Name</p>
+                        <p>Album</p>
+                        <p>Artist</p>
+                    </div>
+                </div>
+                <div class="PlaylistEntity">
+                    <img src="/static/dp.jpg" alt="">
+                    <div class="PlaylistEntityInfo">
+                        <p>Name</p>
+                        <p>Album</p>
+                        <p>Artist</p>
+                    </div>
+                </div>
+                <div class="PlaylistEntity">
+                    <img src="/static/dp.jpg" alt="">
+                    <div class="PlaylistEntityInfo">
+                        <p>Name</p>
+                        <p>Album</p>
+                        <p>Artist</p>
+                    </div>
+                </div>
+                <div class="PlaylistEntity">
+                    <img src="/static/dp.jpg" alt="">
+                    <div class="PlaylistEntityInfo">
+                        <p>Name</p>
+                        <p>Album</p>
+                        <p>Artist</p>
+                    </div>
+                </div>
+                <div class="PlaylistEntity">
+                    <img src="/static/dp.jpg" alt="">
+                    <div class="PlaylistEntityInfo">
+                        <p>Name</p>
+                        <p>Album</p>
+                        <p>Artist</p>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="player">
             <input type="range" min="1" max="1000" value="1" class="seek-slider" id="range">
