implemented chat with dynamic user updatation and user status updates

--- a/view/room.html
+++ b/view/room.html
@@ -42,48 +42,14 @@
                 </div>
                 <div class="roomLobyPane">
                     <h2>People In the Lobby:</h2>
-                    <div class="roomLobyEntity">
+                    <!-- <div class="roomLobyEntity">
                         <img src="/static/dp.jpg" alt="">
                         <div class="roomLobyEntityInfo">
                             <p>Name</p>
                             <p>Status</p>
                         </div>
-                    </div>
-                    <div class="roomLobyEntity">
-                        <img src="/static/dp.jpg" alt="">
-                        <div class="roomLobyEntityInfo">
-                            <p>Name</p>
-                            <p>Status</p>
-                        </div>
-                    </div>
-                    <div class="roomLobyEntity">
-                        <img src="/static/dp.jpg" alt="">
-                        <div class="roomLobyEntityInfo">
-                            <p>Name</p>
-                            <p>Status</p>
-                        </div>
-                    </div>
-                    <div class="roomLobyEntity">
-                        <img src="/static/dp.jpg" alt="">
-                        <div class="roomLobyEntityInfo">
-                            <p>Name</p>
-                            <p>Status</p>
-                        </div>
-                    </div>
-                    <div class="roomLobyEntity">
-                        <img src="/static/dp.jpg" alt="">
-                        <div class="roomLobyEntityInfo">
-                            <p>Name</p>
-                            <p>Status</p>
-                        </div>
-                    </div>
-                    <div class="roomLobyEntity">
-                        <img src="/static/dp.jpg" alt="">
-                        <div class="roomLobyEntityInfo">
-                            <p>Name</p>
-                            <p>Status</p>
-                        </div>
-                    </div>
+                    </div> -->
+                    
                 </div>
             </div>
             <div class="midPane">
@@ -214,6 +180,7 @@
         </div>
     </div>
 </body>
+<script src="/static/js/session.js"></script>
 <script src="/static/js/lobbyUI.js"></script>
 <script src="/static/js/chatUI.js"></script>
 </html>
