--- a/static/css/site-body.css
+++ b/static/css/site-body.css
@@ -75,19 +75,19 @@
     justify-content: space-around;
 }
 .songSearchBar input {
-    width: 80%;
+    width: 100%;
     height: 100%;
     background-color: #151718;
     color: white;
     /* border-radius: 25px; */
 }
-.songSearchBar button {
+/* .songSearchBar button {
     width: 20%;
     height: 100%;
     background-color: #151718;
     color: white;
     border: none;
-}
+} */
 .chatArea {
     width: 100%;
     height: 90%;
@@ -146,7 +146,7 @@
     background-color: black;
     color: white;
     font-family: 'PT Sans';
-    width: 80%;
+    width: 90%;
     height: 4em;
     
     margin: 0.5em 0.25em;
