--- a/view/room.html
+++ b/view/room.html
@@ -95,6 +95,7 @@
     </div>
     <audio hidden id="audioPlayer"></audio>
 </body>
+<script src="/static/js/roomView.js"></script>
 <script src="/static/js/session.js"></script>
 <script src="/static/js/lobbyUI.js"></script>
 <script src="/static/js/chatUI.js"></script>
