--- a/view/room.html
+++ b/view/room.html
@@ -96,9 +96,11 @@
     <audio hidden id="audioPlayer"></audio>
 </body>
 <script src="/static/js/roomView.js"></script>
+<script src="/static/js/users.js"></script>
+<script src="/static/js/playlist.js"></script>
+<script src="/static/js/player.js"></script>
 <script src="/static/js/session.js"></script>
 <script src="/static/js/lobbyUI.js"></script>
 <script src="/static/js/chatUI.js"></script>
 <script src="/static/js/song.js"></script>
-<script src="/static/js/player.js"></script>
 </html>
